# EmbeddedBase

./: CMakeLists.txt  README.md  readme.md  util.cmake
app/: CMakeLists.txt  main.c
doc/: readme.md
driver/: CMakeLists.txt  def.cmake
driver/core/: delay.c  sys.c  usart.c
driver/include/core/: delay.h  sys.h  usart.h
driver/include/stm32/: stm32f4xx_hal_conf.h
driver/stm32/: CMakeLists.txt  stm32f4xx_it.c
rtos/: CMakeLists.txt  toolchain.cmake
rtos/boot/: CMakeLists.txt
rtos/freertos/: CMakeLists.txt  tasks.c
tests/: test  test.cpp  test.hpp  test_main.cpp
